Fix icon verticle alignment

--- a/Framework/sass/components/_buttons.sass
+++ b/Framework/sass/components/_buttons.sass
@@ -12,7 +12,7 @@ input[type="submit"].btn
 	+makeButton
 
 	> .lunacon 
-		vertical-align: text-top !important 
+		vertical-align: bottom
 
 	@each $key, $value in $_color_set
 
