--- a/Framework/sass/components/_dropdown_button.sass
+++ b/Framework/sass/components/_dropdown_button.sass
@@ -7,7 +7,7 @@
   &:hover 
     text-decoration: none
   i.lunacon 
-    vertical-align: text-bottom !important
+    vertical-align: top !important
 
   &__link 
     text-decoration: none
